  a short description in overviews.
  (Florian Angeletti)

### Compiler distribution build system:

- GPR#729: Make sure ocamlnat is built with a $(EXE) extension, merge
  rules between Unix and Windows Makefiles
  (Sébastien Hinderer, review by Alain Frisch)

- GPR#762, GPR#764: Merge Unix and Windows Makefiles in yacc/ and
  debugger/
  (Sébastien Hinderer)

### Internal/compiler-libs changes:

- GPR#744, GPR#781: fix duplicate self-reference in imported cmi_crcs
  list in .cmti files + avoid rebuilding cmi_info record when creating
  .cmti files
  (Alain Frisch, report by Daniel Bunzli, review by Jeremie Dimino)

### Other libraries:

- MPR#7339, GPR#787: Support the '0 dimension' case for bigarrays
  (see Bigarray documentation)
  (Laurent Mazare,
   review by Gabriel Scherer, Alain Frisch and Hezekiah M. Carty)

### Manual and documentation:

- GPR#693: fail on unexpected errors or warnings within caml_example
  environment.
  (Florian Angeletti)

### Bug fixes

- GPR#795: remove 256-character limitation on Sys.executable_name
  (Xavier Leroy)

- GPR#814: fix the Buffer.add_substring bounds check to handle overflow
  (Jeremy Yallop)

- GPR#810: check for integer overflow in Array.concat
  (Jeremy Yallop)

- GPR#805, GPR#815, GPR#833: check for integer overflow in String.concat
  (Jeremy Yallop,
   review by Damien Doligez, Alain Frisch, Daniel Bünzli, Fabrice Le Fessant)

### Standard library:

- GPR#778: Arg: added option Expand that allows to expand a string argument
  to a string array of new arguments
  (Bernhard Schommer)

OCaml 4.04.0:
-------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- GPR#187, GPR#578: Local opening of modules in a pattern.
  Syntax: "M.(p)", "M.[p]","M.[| p |]", "M.{p}"
  (Florian Angeletti, Jacques Garrigue, review by Alain Frisch)

- GPR#301: local exception declarations "let exception ... in"
  (Alain Frisch)

- GPR#508: Allow shortcut for extension on semicolons: ;%foo